--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,25 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Thymeleaf for html pages (Arsen) -->
+		<!-- Thymeleaf for html pages -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>3.1.0-SNAPSHOT</version>
+		</dependency>
+
+		<!-- jpa for spring data -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>3.1.0-SNAPSHOT</version>
+		</dependency>
+
+		<!-- mysql connector  -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
 		</dependency>
 	</dependencies>
 
