--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,12 @@
 			<version>3.1.0-SNAPSHOT</version>
 		</dependency>
 
-		<!-- jpa for spring data -->
-		<dependency>
+		<!-- jdbc for spring data -->
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 			<version>3.1.0-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 
 		<!-- mysql connector  -->
 		<dependency>
