--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# Database
+spring.datasource.url=jdbc:mysql:/localhost:8080/vst-database
+spring.datasource.username=vstuser
+spring.datasource.password=default
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#Thymeleaf config
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
