--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 # Database
-spring.datasource.url=jdbc:mysql:/localhost:8080/vst-database
+spring.datasource.url=jdbc:mysql://localhost:3306/vst
 spring.datasource.username=vstuser
 spring.datasource.password=default
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#temporary disable flyway migration tool
+spring.flyway.enabled=false
 
 #Thymeleaf config
 spring.thymeleaf.prefix=classpath:/templates/
