--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>vst</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>vst</name>
-	<description>Demo project for Spring Boot</description>
+	<description>VST Shop in Spring Boot</description>
 	<properties>
 		<java.version>20</java.version>
 	</properties>
@@ -61,6 +61,20 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 			<version>9.17.0</version>
+		</dependency>
+
+		<!-- json files -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version>
+		</dependency>
+
+		<!-- hibernate -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.2.3.Final</version>
 		</dependency>
 	</dependencies>
 
